tests/run-pass/hello.rs
//ignore-msvc: Stdout not implemented on Windows
fn main() {
    println!("Hello, world!");
}
